fix(footer): correct spacing

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -7,7 +7,7 @@
   color: white;
   display: flex;
   flex-flow: column wrap;
-  padding: 40px;
+  padding: 60px 40px 40px;
   align-items: center;
   &__logo {
     width: 122px;
@@ -17,6 +17,8 @@
     text-align: center;
     width: 120px;
     font-size: 12px;
+    margin: 0;
+    margin-top: 40px;
     @include desktop {
       width: 500px;
       font-size: 24px;
